// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScriptGenerator should render models and their dependencies for CJS module system 1`] = `
"const OtherModel = require('./OtherModel');


module.exports = Address;"
`;

exports[`TypeScriptGenerator should render models and their dependencies for CJS module system 2`] = `
"


module.exports = OtherModel;"
`;

exports[`TypeScriptGenerator should render models and their dependencies for ESM module system 1`] = `
"import OtherModel from './OtherModel';

export default "
`;

exports[`TypeScriptGenerator should render models and their dependencies for ESM module system 2`] = `
"

export default "
`;
